--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\SharedModels\SharedModels\SharedModels.csproj" />
+    <ProjectReference Include="..\TaskManager.SharedModels\SharedModels.csproj" />
   </ItemGroup>
 
 </Project>
